--- a/Moo-at-System-Image-Update.tex
+++ b/Moo-at-System-Image-Update.tex
@@ -1,4 +1,4 @@
-\documentclass[ngerman,xcolor={table,dvipsnames},smaller,compress,hyperref={bookmarks,colorlinks}]{beamer}%,handout
+\documentclass[ngerman,xcolor={table,dvipsnames},smaller,compress,hyperref={bookmarks,colorlinks},handout]{beamer}%
 
 \usepackage{url}
 \usepackage{listings}
@@ -74,7 +74,7 @@
 \item Easy to re-use in several layers of the firmware
     \begin{itemize}
     \item self-sustaining (automatic) update management including forced updates (mind heartbleed)
-    \item embedable into middleware
+    \item embeddable into middleware
     \item ability for shortcuts
     \end{itemize}
 \item self-healing capabilities
@@ -88,9 +88,9 @@
 \begin{frame}[t,fragile]{Audience}
 \begin{block}<1->{Audience}
 \begin{itemize}
-\item Developer who wants to create or improve Perl5 software
-\item Developer who wants to learn how to develop modern OO with Perl5
-\item Developer who interested in developing mathematical exercises
+\item Developer who want to create or improve Perl5 software
+\item Developer who want to learn how to develop modern OO with Perl5
+\item DevOps or Integrators who are interested in embedded or automatic update concepts
 \end{itemize}
 \end{block}
 
@@ -134,18 +134,18 @@ Following knowledge is expected:
 \scriptsize
 \begin{lstlisting}[language=Perl,inputencoding=latin9,escapeinside={(*@}{@*)}]
 {
-package System::Image::Update;
+  package System::Image::Update;
 
-use Moo;
-use MooX::Options with_config_from_file => 1;
-use IO::Async ();
-...
-use File::ConfigDir::System::Image::Update qw(system_image_update_dir);
-around BUILDARGS => sub {...};
-sub run {..}
-sub collect_savable_config {}
-sub reset_config {}
-sub save_config {}
+  use Moo;
+  use MooX::Options with_config_from_file => 1;
+  use IO::Async ();
+  ...
+  use File::ConfigDir::System::Image::Update qw(system_image_update_dir);
+  around BUILDARGS => sub {...};
+  sub run {..}
+  sub collect_savable_config {}
+  sub reset_config {}
+  sub save_config {}
 }
 System::Image::Update->new_with_options->run;
 \end{lstlisting}
@@ -194,7 +194,7 @@ System::Image::Update->new_with_options->run;
 
 \begin{frame}[t,fragile]
 
-\begin{block}<1->{Attributes in Moo}
+\begin{block}<1->{Attributes in Moo - Overview}
 \scriptsize
 \begin{lstlisting}[language=Perl,inputencoding=latin9,escapeinside={(*@}{@*)}]
 package System::Image::Update::Role::Scan;
@@ -213,7 +213,7 @@ has update_mani(*@\pnode(0,0){C}{}@*)fest_uri => ( is => "(*@\pnode(0,0){E}{}@*)
 \uncover<3->{\item attributes \rnode{b}{"scan\_interval"} and \rnode{c}{"update\_manifest\_uri"}}
 \uncover<4->{\item those attributes are \rnode{d}{immutable}}
 \uncover<5->{\item scan\_interval is initialized with a \rnode{f}{constant}}
-\uncover<6->{\item update\_manifest\_uri is initialized by a \rnode{g}{builder}}
+\uncover<6->{\item update\_manifest\_uri is initialized on first access by a \rnode{g}{builder}}
 \uncover<2>{\nccurve[linecolor=olive]{->}{a}{A}}
 \uncover<3>{\nccurve[linecolor=teal]{->}{b}{B}\nccurve[linecolor=teal]{->}{c}{C}}
 \uncover<4>{\nccurve[linecolor=blue]{->}{d}{D}\nccurve[linecolor=blue]{->}{d}{E}}
@@ -229,16 +229,16 @@ has update_mani(*@\pnode(0,0){C}{}@*)fest_uri => ( is => "(*@\pnode(0,0){E}{}@*)
 
 \begin{block}<1->{Attribute options - Selection I}
 \begin{description}
-\item[is] \textbf{required} behavior description
+\item[is] \textbf{mandatory} behavior description
     \begin{description}
-    \uncover<2->{\item[ro] defines the attribute is read only}
-    \uncover<3->{\item[rw] defined the attribute is read-/writable}
-    \uncover<4->{\item[lazy] defines the attribute is read only with a lazy initialization}
+    \uncover<2->{\item[ro] defines the attribute is read-only}
+    \uncover<3->{\item[rw] defined the attribute is read/writable}
+    \uncover<4->{\item[lazy] defines the attribute is read-only with a lazy initialization, implies \texttt{builder => 1}}
     \end{description}
 \uncover<5->{\item[required] when set to a true value, attribute must be passed on instantiation}
 \uncover<6->{\item[isa] defines a subroutine (\texttt{coderef}) which is called to validate values to set}
 \uncover<7->{\item[coerce] defines a subroutine (\texttt{coderef}) which forces attribute values}
-\uncover<8->{\item[trigger] takes a subroutine (\texttt{coderef}) which called anytime the attribute is set \\
+\uncover<8->{\item[trigger] takes a subroutine (\texttt{coderef}) which is called anytime the attribute is set \\
     \uncover<9->{\textbf{special}: the value of $ 1 $ means to generate a (\texttt{coderef}) which calles the method \texttt{\_trigger\_\$\{attr\_name\}} (This is called \textit{attribute shortcut})}}
 \uncover<10->{\item[default] subroutine (\texttt{coderef}) which is called to initialize an attribute}
 \end{description}
@@ -312,9 +312,15 @@ before is called before the method it is modifying. Its return value is totally 
 after is called after the method it is modifying. Its return value is totally ignored.}
 \uncover<4->{\item[around] \texttt{around method(s) => sub \{ \ldots \}} \\
 around is called instead of the method it is modifying. The method you're overriding is passed as \texttt{coderef} in the first argument.}
-\uncover<5->{\item[-] No support for \texttt{super}, \texttt{override}, \texttt{inner} or \texttt{augment}}
+\uncover<5->{\item[-] No support for \texttt{su\pnode(0,0){A}{p}er}, \texttt{over\pnode(0,0){B}{}ride}, \texttt{in\pnode(0,0){C}{}ner} or \texttt{aug\pnode(0,0){D}{m}ent}}
 \end{description}
 \end{block}
+
+\uncover<6->{In doubt \rnode{a}{\texttt{MooX::Override}} provides \texttt{override} and \texttt{super}}
+\uncover<7->{and \rnode{b}{\texttt{MooX::Augment}} provides \texttt{augment} and \texttt{inner}}
+
+\uncover<6>{\nccurve[linecolor=teal]{->}{a}{A}\nccurve[linecolor=teal]{->}{a}{B}}
+\uncover<7>{\nccurve[linecolor=cyan]{->}{b}{C}\nccurve[linecolor=cyan]{->}{b}{D}}
 
 \end{frame}
 
@@ -327,6 +333,7 @@ around is called instead of the method it is modifying. The method you're overri
 \uncover<3->{\item allows multiple modifiers in single namespace}
 \uncover<4->{\item also possible from within roles and not restricted to inheritance}
 \uncover<5->{\item ensures that inherited methods invocation happens right (mostly - remember around)}
+\uncover<6->{\item no need to change packages}
 \end{itemize}
 \end{block}
 
@@ -367,7 +374,8 @@ around collect_savable_config => sub {
     my $self                   = shift;
     my $collect_savable_config = $self->$next(@_);
 
-    $self->update_server eq $default_update_server or $collect_savable_config->{update_server} = $self->update_server;
+    $self->update_server eq $default_update_server
+      or $collect_savable_config->{update_server} = $self->update_server;
     ...
     $collect_savable_config
 }
@@ -426,8 +434,8 @@ around collect_savable_config => sub {
       \item service console moved from PHP to Perl5, PSGI and Dancer
       \uncover<3->{\item system management and automation full Perl5 powered}
       \uncover<4->{\item company infrastructure improved by Perl (eg. production of HP2)}
-      \uncover<5->{\item PoC use Perl6 + NativeCall to eliminate wrapper processes}
-      \uncover<6->{\item created Yocto CPAN Layer for cross compiling lot's of CPAN modules}
+      \uncover<5->{\item created Yocto CPAN Layer for cross compiling lot's of CPAN modules}
+      \uncover<6->{\item PoC use Perl6 + NativeCall to eliminate wrapper processes}
       \end{itemize}
     }
   \end{columns} 
@@ -502,13 +510,13 @@ around collect_savable_config => sub {
     }
     \uncover<8->{
         \ncdiagg[angleA=-90,lineAngle=0.01]{->}{F}{bG}\naput*[Ynodesep=0.5]{\small Yes}
-        \ncdiagg[angleA=-90,lineAngle=0.01]{->}{D}{bG}\naput*[Ynodesep=0.5,npos=1.25]{\small \textcolor{green}{But already}}
+        \ncdiagg[angleA=-90,lineAngle=0.01]{->}{D}{bG}\naput*[Ynodesep=0.5,npos=0.50]{\small \textcolor{green}{But already}}
         \ncline[linewidth=0.5pt,linestyle=solid]{->}{bG}{G}
     }
     \uncover<9->{
         \ncline[linewidth=0.5pt,linestyle=solid]{->}{G}{H}
         \ncline[linewidth=0.5pt,linestyle=solid]{->}{H}{I}\naput*[Ynodesep=0.5]{\small Yes}
-        \ncdiagg[angleA=180,lineAngle=-130,linestyle=solid]{->}{H}{bC}\nbput*[Ynodesep=0.5,npos=1.5]{\small \textcolor{green}{Not yet}}
+        \ncdiagg[angleA=180,lineAngle=-130,linestyle=solid]{->}{H}{bC}\nbput*[Ynodesep=0.5,npos=1.0]{\small \textcolor{green}{Not yet}}
         \ncline[linewidth=0.5pt,linestyle=solid]{->}{I}{J}
         \ncdiagg[angleA=-90,lineAngle=0.01]{->}{R}{bG}\nbput*[Ynodesep=0.5]{\small check}
     }
@@ -549,7 +557,7 @@ has status => ( is => "rw", lazy => 1, builder => 1, predicate => 1,
 );
 
 sub _build_status { -f $_[0]->update_manifest ? "check" :
-    $_[0]->has_recent_update and -e $_[0]->download_image ? "prove" : "scan";
+    $_[0]->has_recent_update && -e $_[0]->download_image ? "prove" : "scan";
 }
 \end{lstlisting}
 \end{block}
@@ -570,7 +578,8 @@ sub _build_status { -f $_[0]->update_manifest ? "check" :
 package System::Image::Update;
 
 use strict; use warnings; use Moo;
-with "System::Image::Update::Role::Scan", "System::Image::Update::Role::Check", ...
+with "System::Image::Update::Role::Scan",
+     "System::Image::Update::Role::Check", ...
 
 has status => ( ... );
 
@@ -582,7 +591,6 @@ around BUILDARGS => sub {
     $params->{status} and $params->{status} eq "prove"
       and $params->{recent_update}
       and $params->{recent_update}->{apply} = DateTime->now->epoch;
-
     $params;
 };
 \end{lstlisting}
@@ -623,7 +631,7 @@ around BUILDARGS => sub {
 \begin{itemize}
 \uncover<2->{\item \rnode{a}{derive from} ''System::Image::Update'' to get the real world picture}
 \uncover<3->{\item \rnode{b}{ensure} no construction argument wastes the self-diagnostics}
-\uncover<4->{\item \rnode{c}{prevent} automatism starts when recent update is found}
+\uncover<4->{\item \rnode{c}{prevent} triggering actions when recent update is found}
 \end{itemize}
 \uncover<2>{\nccurve[linecolor=olive]{->}{a}{A}}
 \uncover<3>{\nccurve[linecolor=olive]{->}{b}{B}}
@@ -673,16 +681,16 @@ package hp2sm;
 use strict; use warnings; use Dancer2 ':syntax'; ...; use Update::Status;
 
 get '/status' => sub {
-    my $us = Update::Status->(*@\pnode(0,0){A}{}@*)new;
-    my $status = (*@\pnode(0,0){B}{}@*)"idle";
+    my $us = Update::Status->(*@\pnode(0,0){A}{}@*)new; my $status = (*@\pnode(0,0){B}{}@*)"idle";
     $us->has(*@\pnode(0,0){C}{}@*)_recent_update and $status = (*@\pnode(0,0){D}{}@*)"available";
     $us->stat(*@\pnode(0,0){E}{}@*)us eq "prove" and $status = (*@\pnode(0,0){F}{}@*)"downloading";
     $us->has_recent_update and -f $us->(*@\pnode(0,0){G}{}@*)download_image
       and $us->download_sums->{(*@\pnode(0,0){H}{}@*)size} == stat( $us->download_image )->(*@\pnode(0,0){I}{}@*)size
       and $status = (*@\pnode(0,0){J}{}@*)"proved";
     my $pl = (*@\pnode(0,0){K}{}@*)get_process_stats();
-    firstval { $pl->process_name($_) =~ /(*@\pnode(0,0){L}{}@*)flash-device/ } ( 0 .. $pl->entries() - 1 )
+    firstval {$pl->process_name($_) =~ /(*@\pnode(0,0){L}{}@*)flash-device/} (0 .. $pl->entries()-1)
       and $status = "(*@\pnode(0,0){M}{}@*)applying";
+    return $json->encode({status => $status});
 };
 \end{lstlisting}
 \end{block}
@@ -863,7 +871,7 @@ FILES_${PN} (*@\pnode(0,0){D}{}@*)+= "${sysconfdir}"
 \begin{itemize}
 \uncover<2->{\item Provides \rnode{a}{settings} for \texttt{Log::Any} (mind \texttt{\_trigger\_log\_adapter} in \texttt{System::Image::Update::Role::Logging} consuming \texttt{MooX::Log::Any})}
 \uncover<3->{\item redirect place to \rnode{b}{store update} manifest (files)}
-\uncover<4->{\item Provide \rnode{c}{authentication} to update server for development boxes (avoid \texttt{builder} is called)}
+\uncover<4->{\item Provide \rnode{c}{authentication} to update server for development boxes (avoid \texttt{builder} being called)}
 \end{itemize}
 
 \uncover<2-2>{\nccurve[linecolor=olive]{->}{a}{A}}
@@ -885,7 +893,7 @@ FILES_${PN} (*@\pnode(0,0){D}{}@*)+= "${sysconfdir}"
 \begin{itemize}
 \uncover<4->{\item using roles for behavioral design (avoid duck typing)}
 \uncover<5->{\item using explicit patterns for clear separation of concerns}
-\uncover<6->{\item express intensions clearer for method overloading by using \textit{method modifiers}}
+\uncover<6->{\item express intentions clearer for method overloading by using \textit{method modifiers}}
 \end{itemize}
 \end{itemize}
 \end{block}
